# gpt-auto-register

./: .gitignore  API copy.md  CPA_UPLOAD_IMPLEMENTATION.md  CPA_配置指南.md  LICENSE  README.md  accounts.txt  api.md  browser.py  config.example.yaml  config.py  email_providers.py  gen_email_links.py  mailtm_service.py  main.py  phone-keys.txt  pyproject.toml  server.py  temporam_service.py  test_cpa_upload.py  test_real_token_upload.py  test_token_upload.py  utils.py
.claude/: settings.json  settings.local.json
.codex/: config.toml
app/: __init__.py  account_login_service.py  browser.py  browser_json_service.py  config.py  custom2925_service.py  email_providers.py  gaggle_service.py  gptmail_service.py  mailtm_service.py  main.py  nnai_service.py  oauth_service.py  outlookemail_service.py  payment_service.py  server.py  stored_accounts.py  tempmail_lol_service.py  temporam_service.py  token_batch_service.py  us_proxy_pool.py  utils.py
chrome-extension/: README.md  content-script.js  manifest.json  service-worker.js  sidepanel.css  sidepanel.html  sidepanel.js
cloudflare-email-worker/: README.md  package.json  pnpm-lock.yaml  schema.sql  wrangler.toml
cpa/: extract_json_files.py
firefox-extension/: README.md  TEST_EXPORT.md  background.js  content-script.js  convert_order_txt.py  manifest.json  sidebar.css  sidebar.html  sidebar.js
firefox-extension-mini/: content-script.js  manifest.json  sidebar.html  sidebar.js
firefox-extension-v2/: background.js  content-script.js  manifest.json  sidebar.css  sidebar.html  sidebar.js  us_zip3_state_ranges.json
(+35 files in other folders)
