[project]
name = "chatgpt-auto-register"
version = "1.0.0"
description = "ChatGPT 账号批量注册工具，使用 NNAI.website 邮箱渠道，支持 Web 管理界面"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.7,<0.14",
    "faker>=40.1.0",
    "flask>=3.1.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "setuptools>=82.0.0",
    "undetected-chromedriver>=3.5.5",
    "waitress>=3.0.2",
    "pysocks>=1.7.1",
    "playwright>=1.56.0",
]
